[tool.poetry]
name = "langserve-railway-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sse-starlette = "^1.6.5"
tomli-w = "^1.0.0"
uvicorn = "^0.23.2"
fastapi = "^0.110.0"
langserve = "^0.0.46"
langchain-cli = "*"
pirate-speak = { path = "packages/pirate-speak" }
python-dotenv = "^1.0.0"
langchain = "^0.1.10"
extraction-openai-functions = {path = "packages/extraction-openai-functions", develop = true}
cassandra-synonym-caching = {path = "packages/cassandra-synonym-caching", develop = true}
rag-conversation = {path = "packages/rag-conversation", develop = true}
openai-functions-agent = {path = "packages/openai-functions-agent", develop = true}
research-assistant = {path = "packages/research-assistant", develop = true}

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
pygithub = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
